welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:3: error: type mismatch;
 found   : Int(7)
 required: Boolean
    if (0<hour<7 || 20<hour<23) {
               ^parotTrouble:3: error: type mismatch;
 found   : Int(23)
 required: Boolean
    if (0<hour<7 || 20<hour<23) {
                            ^